# envsensor-demo

./: .pre-commit-config.yaml  Cargo.toml  README.md  architecture.html  build.rs
.github/workflows/: build.yml
src/: lib.rs  nextpm.rs  rydason.rs  sensor.rs  tb600b_c.rs
