[package]
name = "envsensor-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
eframe = "0.32.3"
egui = "0.32.3"
egui_plot = "0.33.0"
rand = "0.9.2"
slint = "1.13.1"

[build-dependencies]
slint-build = "1.13.1"

[[bin]]
name = "slint_demo"
path = "src/bin/slint_demo/main.rs"
