[package]
name = "envsensor-demo"
version = "0.1.0"
edition = "2024"
description = "An application for fetching and visualizing data from environment sensors."
license = "MIT"

[dependencies]
anyhow = "1.0.100"
binrw = "0.15.0"
bus = "2.4.1"
chrono = "0.4.42"
crc = "3.3.0"
eframe = "0.32.3"
egui = "0.32.3"
egui_plot = "0.33.0"
image = "0.25.8"
num_enum = "0.7.4"
serialport = "4.7.3"
slint = "1.13.1"
strum = "0.27.2"
strum_macros = "0.27.2"

[build-dependencies]
slint-build = "1.13.1"
winres = "0.1.12"

[[bin]]
name = "slint_demo"
path = "src/bin/slint_demo/main.rs"
